apps/04-homelab/homepage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    spec:
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:v1.13.2
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /api/healthcheck
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
          volumeMounts:
            # - mountPath: /app/config/custom.js
            #   name: homepage-config
            #   subPath: custom.js
            # - mountPath: /app/config/custom.css
            #   name: homepage-config
            #   subPath: custom.css
            - mountPath: /app/config/bookmarks.yaml
              name: homepage-config
              subPath: bookmarks.yaml
            # - mountPath: /app/config/docker.yaml
            #   name: homepage-config
            #   subPath: docker.yaml
            - mountPath: /app/config/kubernetes.yaml
              name: homepage-config
              subPath: kubernetes.yaml
            - mountPath: /app/config/services.yaml
              name: homepage-config
              subPath: services.yaml
            - mountPath: /app/config/settings.yaml
              name: homepage-config
              subPath: settings.yaml
            - mountPath: /app/config/widgets.yaml
              name: homepage-config
              subPath: widgets.yaml
              # - mountPath: /app/config/logs
              #   name: logs
      volumes:
        - name: homepage-config
          configMap:
            name: homepage
      # - name: logs
      #   emptyDir: {}
