apps/04-homelab/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  annotations:
    external-dns.alpha.kubernetes.io/hostname: home.pontifex.dev
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
