apps/04-homelab/homepage/network-policies.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: homepage-policy
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
    - Egress
    - Ingress
  ingress:
    # Allow traffic from local network
    - from:
        - ipBlock:
            cidr: 10.10.10.0/24
  egress:
    # Allow to talk to k8s api server
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: default
      ports:
        - protocol: TCP
          port: 443
    # Allow DNS resolution
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
